--- a/src/date-picker/style.scss
+++ b/src/date-picker/style.scss
@@ -1,10 +1,4 @@
-.haya-date-picker {
-  display: inline-block;
-  background: #fff;
-  border-radius: 7px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-
+[data-component="haya-date-picker"] {
   .date-picker-table {
     border-spacing: 0px;
     border-collapse: separate;
